--- a/cliente/index.html
+++ b/cliente/index.html
@@ -4,7 +4,9 @@
     <title>Brazor</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">    
-    <link rel="stylesheet" href="cliente/style.css">    
+    <link rel="stylesheet" href="cliente/style.css">
+    <link rel="stylesheet" href="cliente/styles/pace.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
 	<script src="cliente/src/clienteCom.js"></script>
     <script src="cliente/src/clienteRest.js"></script>
