Corregidos: superposicion de azul y verde, movimiento del deck de luchadores y carga de imagen en index

--- a/cliente/index.html
+++ b/cliente/index.html
@@ -36,6 +36,11 @@
 
     <div id="content">
         <div id="intro">
+            Brazor es un increíble juego de luchadores por turnos con el que
+            lo pasarás en grande jugando contra tus amigos. El juego es gratuito
+            y solo necesitas crear una cuenta para jugar. Empezarás con un solo
+            luchador, pero podrás ir desbloqueando nuevos luchadores conforme
+            ganes partidas contra otros jugadores.
         </div>
     </div>
 </body>
