--- a/cliente/index.html
+++ b/cliente/index.html
@@ -18,6 +18,11 @@
 <body>
     <header class="masthead"></header>
 
+    <script>
+        // PRELOADING HOVER IMAGES
+        var playHover = new Image();
+        playHover.src = url(img/btn-play1-over.png)
+    </script>
     <div style="display: block;">
         <div class="content-menu menu-flex">
             <div class="menu-left">
